<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:padding="24dp"
    android:scrollbars="none"
    tools:context=".activities.SigninActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40sp"
            android:text="@string/Ben_Tornato"
            android:textColor="@color/primary_text"
            android:textSize="24sp"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4sp"
            android:text="@string/sing"
            android:textColor="@color/secondary_text"
            android:textSize="12sp"
            android:textStyle="bold" />
        
        <EditText
            android:id="@+id/inputEmail"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="40sp"
            android:background="@color/input_background"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:paddingStart="16sp"
            android:paddingEnd="16sp"
            android:textColor="@color/primary_text"
            android:textSize="13sp" />


        <EditText
            android:id="@+id/InputPassword"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="16sp"
            android:background="@color/input_background"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:paddingStart="16sp"
            android:paddingEnd="16sp"
            android:textColor="@color/primary_text"
            android:textSize="13sp" />

        
        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonSignIn"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_marginTop="20dp"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            app:cornerRadius="8dp" />

        <TextView
            android:id="@+id/textCreateAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30sp"
            android:text="@string/create_new_account"
            android:textColor="@color/primary"
            android:textSize="13sp"
            android:textStyle="bold" />



    </LinearLayout>

</ScrollView>